--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ body {
     float: left;
     margin-left: 20px;
     align-items: center;
+    left: 20px;
    
 }
 
@@ -122,7 +123,7 @@ body {
     position: relative;
     width: 50%;
     padding: 20px 20px 20px 40px;
-    transition: 0.5s;
+    /* transition: 0.5s; */
     visibility: hidden;
 
 }
@@ -160,7 +161,7 @@ body {
     font-weight: 700;
 }
 
-@media (max-width: 1150px) and (min-width: 700px)  {
+@media (max-width: 1150px) and (min-width: 601px)  {
     
     .card{
 
